[package]
name = "config-pda-gated"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runnable RFP-001 config PDA gated authority example"

[dependencies]
admin-authority-core = { path = "../../admin-authority-core" }
mint-sdk = { path = "../../mint-sdk" }
