[package]
name = "fixed-supply"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Runnable fixed-supply revoked-authority example"

[dependencies]
admin-authority-core = { path = "../../admin-authority-core" }
mint-sdk = { path = "../../mint-sdk" }
