[package]
name = "admin_authority_spike-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "admin_authority_spike"
path = "src/bin/admin_authority_spike.rs"

[dependencies]
spel-framework = { git = "https://github.com/logos-co/spel.git", rev = "31e52c529baba2205eeeacf5bb52647e84236b94" }
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }
risc0-zkvm = { version = "=3.0.5", features = ["std"] }
admin_authority_spike_core = { path = "../../admin_authority_spike_core" }
serde = { version = "1.0", features = ["derive"] }
borsh = "1.5"
ruint = "=1.17.0"
